@@ -30,7 +30,6 @@ PACKAGE_VERSION=@PACKAGE_VERSION@
 target_cpu=@target_cpu@
 platform=@platform@
 host_os=@host_os@
-font=@datadir@/@PACKAGE_TARNAME@/ascii.pf2
 pkglibdir=${libdir}/`echo ${PACKAGE_TARNAME}/${target_cpu}-${platform} | sed ${transform}`
 localedir=@datadir@/locale
 
@@ -85,11 +84,6 @@ if [ "${target_cpu}-${platform}" = "i386-pc" ] ; then
   --disk-module=MODULE    disk module to use
 EOF
 fi
-if [ "${target_cpu}-${platform}" = "mips-yeeloong" ] ; then
-    cat <<EOF
-  --font=FILE             font file to use
-EOF
-fi
     cat <<EOF
 
 INSTALL_DEVICE can be a GRUB device name or a system device filename.
@@ -134,10 +128,11 @@ do
     --modules=*)
 	modules=`echo "$option" | sed 's/--modules=//'` ;;
 
+# Accept and ignore for compatibility
     --font)
-	font=`argument $option "$@"`; shift;;
+        shift;;
     --font=*)
-	font=`echo "$option" | sed 's/--font=//'` ;;
+	;;
 
     --root-directory)
 	rootdir=`argument $option "$@"`; shift;;
@@ -415,7 +410,7 @@ if [ "${target_cpu}-${platform}" = "i386-pc" ] || [ "${target_cpu}-${platform}" 
     $grub_setup ${setup_verbose} ${setup_force} --directory=${grubdir} --device-map=${device_map} \
         ${install_device} || exit 1
 elif [ "${target_cpu}-${platform}" = "mips-yeeloong" ] ; then
-    $grub_mkimage ${config_opt} -f ${font} -d ${pkglibdir} -O ${mkimage_target} --output=/boot/grub.elf --prefix=${prefix_drive}${relative_grubdir} $modules || exit 1
+    $grub_mkimage ${config_opt} -d ${pkglibdir} -O ${mkimage_target} --output=/boot/grub.elf --prefix=${prefix_drive}${relative_grubdir} $modules || exit 1
 else
     $grub_mkimage -O ${mkimage_target} ${config_opt} -d ${pkglibdir} --output=/boot/multiboot.img --prefix=${prefix_drive}${relative_grubdir} $modules || exit 1
 fi
